--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 nav ul li{
     display:inline-block;
+    font-size: 1.3rem;
 }
  
 body{  
@@ -24,7 +25,7 @@ header, footer{
 }
 
 nav ul li {
-    margin-top: 60px;
+    margin-top: 30px;
     margin-right: 30px;
 }
 .attivo{
@@ -302,8 +303,15 @@ nav ul li {
     color:antiquewhite;
     border-top: 50%;
 }
-.icona{
+.icona {
     color: antiquewhite;
+}
+.icona:hover{
+    color:#144722;
+}
+.card:hover {
+    background-color: antiquewhite;
+    color: #144722;
 }
 
 /*pagina curiosità*/
