--- a/css/style.css
+++ b/css/style.css
@@ -333,3 +333,86 @@ nav ul li {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
+/*curiosità*/
+.curiosità2 {
+    margin: 0;
+    padding: 9;
+    font-family: sans-serif;
+    background-color: antiquewhite;
+    flex-direction: row;
+    font-family: 'Montserrat', sans-serif;
+}
+.intramezzo{
+    margin-top: 175px;
+    background-color: #144722;
+    text-align: center;
+    font-size: 0.8rem;
+    color:antiquewhite;
+    font-family: 'Montserrat', sans-serif;
+}
+.contenitore {
+    position: relative;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 0px;
+}
+.contenitore .box {
+    position: relative;
+    width: 90%;
+    height: 300px;
+    margin-bottom: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    overflow: hidden;
+    border-radius: 10px;
+    
+}
+.contenitore .box .quesito {
+    position: absolute;
+    margin: 20px, 100px;
+    border: 15px;
+    width: 100%;
+    height: 100%;
+    background-color: #CC5C20;
+    transition: 0.7s;
+    z-index: 1;
+    color:antiquewhite;
+    font-size:1.2rem;
+    text-align: center;
+    padding-top: 15%;
+    padding-left: 7%;
+    padding-right: 7%;
+    font-family: 'Montserrat', sans-serif;
+}
+.contenitore .box:hover .quesito {
+    top: 0px;
+    color:antiquewhite;
+    height: 120px;
+    text-align: center;
+    padding-top: 5%;
+    padding-left: 7%;
+    padding-right: 7%;
+}
+.contenitore .box .affermazione {
+    position: absolute;
+    margin-top: 20px;
+    height: calc(100% - 100px);
+    text-align: center;
+    padding: 20px;
+    box-sizing:  border-box;
+    transition: 0.7s;
+    opacity: 0;
+    background-color: #144722;
+    color: antiquewhite;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.contenitore .box:hover .affermazione {
+    top: 100px;
+    opacity: 1;
+}
+.contenitore .box .affermazione p {
+    margin: 0;
+    padding: 0;
+    color: antiquewhite;
+}
