--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,8 @@ nav ul li {
     font-size: 0.8rem;
     color:antiquewhite;
     font-family: 'Montserrat', sans-serif;
+    margin-bottom: 0px;
+    width: 100%;
 }
 .contenitore {
     position: relative;
@@ -359,9 +361,9 @@ nav ul li {
 .contenitore .box {
     position: relative;
     width: 90%;
-    height: 300px;
+    height: 310px;
     margin-bottom: 10%;
-    margin-left: 10%;
+    margin-left: 5%;
     margin-right: 10%;
     overflow: hidden;
     border-radius: 10px;
